--- a/Index.html
+++ b/Index.html
@@ -5,15 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="VETERINARIA, PET-SHOP, PERROS, GATOS, MASCOTA">
+    <meta name="description" content="Tienda especializada en productos para tu mascota">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="estilos/estilo.css">
-    <title>Document</title>
+    <link rel="icon" type="image/x-icon" href="https://img.icons8.com/color/48/null/dog.png"/>
+
+ 
+    <title>Pet-Shop Alma</title>
 </head>
 
 <body>
     <header class="navbar" style="background-color: rgb(14, 9, 9)">
-        <h3>Pet-Shop Alma</h3>
+        <h1>Pet-Shop Alma</h1>
         <nav class="navbar">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">Home</a>
@@ -42,14 +47,14 @@
 
     <main class="container">
         <div class="box">
-            <a href="paginas/productos.html"><img src="multimedia/fondogato.jpg" class="rounded-pill" alt=""></a> Caja 1
+            <a href="paginas/productos.html"><img src="multimedia/fondogato.jpg" class="rounded-pill" alt="fondogato"></a> Caja 1
         </div>
         <div class="box">
-            <a href="paginas/productos.html"><img src="multimedia/fondoperro.jpg" class="rounded-pill" alt=""></a> Caja
+            <a href="paginas/productos.html"><img src="multimedia/fondoperro.jpg" class="rounded-pill" alt="fondoperro"></a> Caja
             2
         </div>
         <div class="box">
-            <a href="paginas/turnos.html"><img src="multimedia/fondoturno.jpg" class="rounded-pill" alt=""></a>Caja 3
+            <a href="paginas/turnos.html"><img src="multimedia/fondoturno.jpg" class="rounded-pill" alt="fondoturno"></a>Caja 3
         </div>
     </main>
     <footer class="footer">
