--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -13,10 +13,30 @@
 
 <body>
     <header class="navbar" style="background-color: rgb(14, 9, 9)">
-        <h3>Pet-Shop Alma</h3>
+        <h1>Pet-Shop Alma</h1>
         <nav class="navbar">
             <div class="container-fluid">
-                <a class="navbar-brand" href="../Index.html">Atras</a>
+                <a class="navbar-brand" href="../index.html">Home</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="../paginas/productos.html">Productos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="../paginas/ubicacion.html">Ubicacion</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../paginas/contacto.html">Contacto</a>
+                        </li>
+                        </li>
+                    </ul>
+                </div>
+            </div>
             </div>
         </nav>
     </header>
@@ -35,7 +55,7 @@
             <div class="toast-container position-fixed bottom-0 end-0 p-3">
                 <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
                     <div class="toast-header">
-                        <img src="..." class="rounded me-2" alt="...">
+                        <img src="..." class="rounded me-2" alt="turno">
                         <strong class="me-auto">P-S Alma</strong>
                         <small>1 mins ago</small>
                         <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
